# vmcli

./: Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: release.yml
backlog/: config.yml
src/: main.rs
