[package]
name = "vmcli"
version = "2.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
